[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../../crates/core" }
threadpool = "*"
env_logger = "*"
tokio = {version = "1.36", features = ["rt-multi-thread", "net"]}